--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "trydo",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ousmanekana.github.io/Infinix",
+  "homepage": "https://infinixsolutions.github.io/Site",
   "basename": "/",
   "dependencies": {
     "@babel/core": "7.4.3",
