--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dev-utils": "^9.1.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-gtm-module": "^2.0.11",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.11.0",
